<resources>
    <string name="app_name">madlabproject</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email1">Email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">CLick to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="textview">TextView</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="admin_login">Admin Login</string>
    <string-array name="languages">
        <item>Snacks</item>
        <item>Stationary</item>
        <item>Soft drinks</item>
    </string-array>
</resources>