<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainpage1"
    tools:context=".register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Register" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/register"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/RegisterNow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/click_to_login" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="241dp"
        android:layout_height="0dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/registerillustration" />

</androidx.constraintlayout.widget.ConstraintLayout>