<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainpage1"
    tools:context=".admin_login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/admin_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Admin Login" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textAlignment="center"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textAlignment="center"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/adminillustration" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="187dp"
        android:layout_height="0dp"
        android:layout_marginTop="126dp"
        android:layout_marginBottom="63dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userbackground" />

</androidx.constraintlayout.widget.ConstraintLayout>