<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainpage1"
    tools:context=".login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Student Login"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Student Login" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textAlignment="center"
            tools:ignore="TextFields" />

        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textAlignment="center"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login" />

        <TextView
            android:id="@+id/LoginNow"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/click_to_register"
            android:textColor="#616161" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/adminillustration" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/studentillustration" />
</androidx.constraintlayout.widget.ConstraintLayout>